# tp_check

./: .gitignore  Makefile  README.md  pyproject.toml
src/tp_check/: analyzer.py  app.py  parser.py  reporting.py  skiplist.py
src/tp_check/templates/: index.html
