[project]
name = "tp-check"
version = "0.1.0"
description = "Local Flask app for checking break compliance from time punch PDFs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "pypdf>=5.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[project.scripts]
tp-check = "tp_check.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tp_check"]
